[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "mental-health-sentiment-analysis"
version = "0.1.0"
description = "A data processing pipeline for mental health sentiment analysis."
authors = ["Ivy Smith <ivy.s@wustl.edu>"]

[tool.poetry.dependencies]
python = "^3.10.13"
dagster = "^1.7.0"
nltk = "^3.8.1"
pandas = "^2.2.1"
textblob = "^0.18.0.post0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[tool.poetry.scripts]