[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "src"
version = "1.0.0"
description = "A data processing pipeline for mental health sentiment analysis."
authors = ["Ivy Smith <ivy.s@wustl.edu>"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]

[tool.poetry.dependencies]
python = "^3.10.13"
dagster = "^1.7.0"
nltk = "^3.8.1"
pandas = "^2.2.1"
textblob = "^0.18.0.post0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]